# marketpool

./: README.md
.claude/: launch.json
contracts/: .gitignore  Cargo.toml
contracts/deployments/: testnet.json
contracts/pool_contract/: Cargo.toml
contracts/pool_contract/src/: lib.rs  reputation_bridge.rs  storage.rs  test.rs  types.rs
contracts/pool_contract/test_snapshots/test/: test_cancel_emergency_draw_allows_new_request.1.json  test_contribute_twice_same_cycle_rejected.1.json  test_contribute_wrong_amount_rejected.1.json  test_create_pool_sets_defaults.1.json  test_double_draw_same_cycle_rejected.1.json  test_draw_order_correctness_full_rotation.1.json  test_draw_out_of_order_rejected.1.json  test_emergency_draw_does_not_consume_rotation_slot.1.json  test_emergency_draw_double_vote_rejected.1.json  test_emergency_draw_request_auto_approves_requester.1.json  test_emergency_draw_second_request_rejected_while_pending.1.json  test_emergency_draw_threshold_even_members_exact_half_rejected.1.json  test_emergency_draw_threshold_even_members_majority_passes.1.json  test_emergency_draw_threshold_odd_members.1.json  test_get_all_members_returns_full_roster_in_draw_order.1.json  test_join_pool_assigns_sequential_draw_positions.1.json  test_join_pool_no_guarantor_needed_after_prior_reputation.1.json  test_join_pool_rejects_when_pool_full.1.json  test_join_pool_requires_guarantor_when_no_reputation.1.json  test_mark_adjusted_contribution_overwrites_status.1.json  test_only_requester_or_admin_can_execute_passed_vote.1.json
contracts/reputation_contract/: Cargo.toml
contracts/reputation_contract/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/scripts/: seed_demo_pools.sh
contracts/shared_types/: Cargo.toml
contracts/shared_types/src/: lib.rs
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  (+2 more)
(+42 files in other folders)
